[package]
name = "lithia"
version = "1.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/hen6003/Lithia"
keywords = ["language", "lisp"]
categories = ["compilers"]
description = "Embeddable and simple lisp dialect"
exclude = [
    "examples/*",
    "bin/*",
]

[features]
default = ["system"]
system = []

[dependencies]
regex = "1.5.5"

[[bin]]
name = "lithia"
path = "src/bin/main.rs"