[package]
name = "lithia"
version = "1.0.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/hen6003/Lithia"
keywords = ["language", "lisp"]
categories = ["compilers"]
description = "Embeddable and simple lisp dialect"
exclude = [
    "lisp-examples/*",
]

[features]
default = ["system"]
system = []

[dependencies]
regex = "1.5.6"

[[bin]]
name = "lithia"
path = "src/bin/main.rs"
