[package]
name = "lithia"
version = "1.0.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/hen6003/Lithia"
keywords = ["language", "lisp"]
categories = ["compilers"]
description = "Embeddable and simple lisp dialect"
exclude = [
    "lisp-examples/*",
]

[features]
default = ["std"]
std = []

[dependencies]
regex = "1.9.1"
hashbrown = "0.14"

[[bin]]
name = "lithia"
path = "src/bin/main.rs"
required-features = ["std"]
